# Darkly

./: .gitignore  CMakeLists.txt  README.md  org.kde.KStyle.Darkly5.json  org.kde.KStyle.Darkly6.json
.github/assets/docker/kubuntu/: Dockerfile
.github/assets/specs/: darkly.spec
.github/workflows/: archlinux.yml  darkly-ci.yml  debian.yml  debian13.yml  debian14.yml  fedora.yml  flatpak.yml  kubuntu.yml  neon.yml  opensuse-tw.yml  release.yml
cmake/: CPackLists.cmake
desktoptheme/: CMakeLists.txt  metadata.desktop.in  metadata.json.in
kdecoration/: CMakeLists.txt  darkly.h  darkly.json  darklyapplicationmenu.cpp  darklyapplicationmenu.h  darklybutton.cpp  darklybutton.h  darklydecoration.cpp  darklydecoration.h  darklyexceptionlist.cpp  darklyexceptionlist.h  darklysettings.kcfgc  darklysettingsdata.kcfg  darklysettingsprovider.cpp  darklysettingsprovider.h
kdecoration/config/: CMakeLists.txt  darklyconfigwidget.cpp  darklyconfigwidget.h  darklydetectwidget.cpp  darklydetectwidget.h  darklyexceptiondialog.cpp  darklyexceptiondialog.h  darklyexceptionlistwidget.cpp  darklyexceptionlistwidget.h  darklyexceptionmodel.cpp  darklyexceptionmodel.h  darklyitemmodel.cpp  darklyitemmodel.h  darklylistmodel.h  kcm_darklydecoration.json
kdecoration/config/ui/: darklyconfigurationui.ui  darklyexceptiondialog.ui
kdecoration/libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp
kstyle/: CMakeLists.txt  darkly.h  darkly.kcfg  darklyblurhelper.cpp  darklyblurhelper.h  darklyhelper.cpp  darklyhelper.h  darklystyle.cpp  darklystyle.h  darklywindowmanager.cpp
kstyle/config/: darklystyleconfig.cpp
kstyle/config/ui/: darklystyleconfig.ui
libdarklycommon/: CMakeLists.txt  darklyboxshadowrenderer.h
