cmake_minimum_required(VERSION 3.16)

set(PROJECT_NAMESPACE darkly)
set(PACKAGE_INSTALL_DATADIR ${KDE_INSTALL_DATADIR}/plasma/desktoptheme)

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/metadata.desktop.in" "${CMAKE_CURRENT_BINARY_DIR}/metadata.desktop" @ONLY)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/metadata.desktop" DESTINATION "${PACKAGE_INSTALL_DATADIR}/${PROJECT_NAMESPACE}")
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/dialogs/" DESTINATION "${PACKAGE_INSTALL_DATADIR}/${PROJECT_NAMESPACE}/dialogs")
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/widgets/" DESTINATION "${PACKAGE_INSTALL_DATADIR}/${PROJECT_NAMESPACE}/widgets")
